Backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backendapp
  labels:
    app: backendapp
    env: pro
    partition: bgstone
spec:
  ports:
  - port: 8007
    protocol: TCP
    targetPort: 8007
  selector:
    app: backendapp
  sessionAffinity: None
  type: ClusterIP
